fix:  align items nav

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -15,4 +15,10 @@ header{
 
 section{
   display: flex;
+  align-items: center;
+}
+
+nav{
+  display: flex;
+  gap: 93px;
 }
